refactor(app): add trace handler